--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*
-Errno::ENOENT: No such file or directory - styles.sass
+Errno::ENOENT: No such file or directory - styles.scss
 
 Backtrace:
 /Users/FTS/.rvm/gems/ruby-1.9.3-p448/gems/sass-3.2.12/lib/sass/plugin/compiler.rb:360:in `read'
@@ -22,4 +22,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Errno::ENOENT: No such file or directory - styles.sass"; }
+  content: "Errno::ENOENT: No such file or directory - styles.scss"; }
